@@ -1,0 +1,6 @@
+V4Hash,HashSHA1,FileName,FilePath,FileSize,HashSHA256,HashSHA384,HashSHA512,CreateTime,ModTime,LastAccessTime
+B5E254DF3BB37EFCDFD883D69897770A,2CC793143BBE3BB8A2B9949B53583606885241E1,fccu-docprop-0.1.tar.gz,D:\md5deep\,10429,,,,16.4.2008 14:29:24,16.4.2008 10:24:28,18.4.2008
+044CF1145CEA5B9F2E1F31C5D4D8016C,E463CB8D316498CA7456683DA87B2C7924BCA117,fccu.evtreader.1.1.tar.gz,D:\md5deep\,9559,,,,16.4.2008 14:29:24,16.4.2008 10:24:20,18.4.2008
+E51313050E8F7D9E21C44F5EF13BC2F0,38D93B95BA824B1DA2787C16890F3023C1312107,tableau-parm-0.1.0.tar.gz,D:\md5deep\,21638,,,,16.4.2008 14:29:24,16.4.2008 9:21:10,18.4.2008
+0E838E1B10F91F867E9AE2D2FF6B10D6,E5EBC2727D692AE46E39B9E65A5FA797E913CECA,cdfs-2.6.23.tar.bz2,D:\md5deep\,26197,,,,16.4.2008 14:29:24,16.4.2008 8:29:44,18.4.2008
+C250D966FF3BF6594A16410B63429AF1,25B831E4DB3190D5613B768F50407BC5C7A9D6E1,md5deep-2.0.1-001.tar.gz,D:\md5deep\,203211,,,,16.4.2008 14:29:24,2.4.2008 14:25:16,18.4.2008
